@@ -37,6 +37,7 @@ x2gokdrive (0.0.0.1-0x2go1) UNRELEASED; urgency=medium
     - automatically decrease the jpeg quality when to many frames in queue.
     - update the screen with png frames when no data is transmitted.
     - make screen repaint faster.
+    - add command line option for initial JPEG quality.
 
   [ Mihai Moldovan ]
   * Initial release:
